@@ -26,7 +26,27 @@ file=${tcl_prefix}/tclConfig.sh
 file=${tk_prefix}/tkConfig.sh
 . $file
 
+if (gzip --version ; exit) 2>/dev/null; then
+    COMPEXE="gzip"
+    COMPEXT="gz"
+else
+    COMPEXE="compress"
+    COMPEXT="Z"
+fi
+echo "using '$COMPEXE' to compress archives"
+
+if test "`uname -s`" = "AIX" ; then
+    SYSID="AIX-`uname -v`-`uname -r`"
+    TK_LIBS="$TK_LIBS -lc"
+else
+    SYSID="`uname -s`-`uname -r`-`uname -p`"
+fi
+
 CC=$TCL_CC
+
+AC_SUBST(COMPEXE)
+AC_SUBST(COMPEXT)
+AC_SUBST(SYSID)
 
 AC_SUBST(CC)
 AC_SUBST(INSTALL)
@@ -34,6 +54,7 @@ AC_SUBST(INSTALL_PROGRAM)
 AC_SUBST(INSTALL_DATA)
 AC_SUBST(TCL_SHLIB_CFLAGS)
 AC_SUBST(TCL_SHLIB_LD)
+AC_SUBST(TCL_SHLIB_LD_LIBS)
 AC_SUBST(TCL_SHLIB_SUFFIX)
 AC_SUBST(TCL_VERSION)
 AC_SUBST(TCL_RANLIB)
@@ -48,6 +69,8 @@ AC_SUBST(TCL_LD_FLAGS)
 AC_SUBST(TCL_COMPAT_OBJS)
 AC_SUBST(TCL_LD_SEARCH_FLAGS)
 AC_SUBST(TCL_SRC_DIR)
+AC_SUBST(TCL_LIB_SPEC)
+AC_SUBST(TCL_STUB_LIB_SPEC)
 AC_SUBST(TCL_BUILD_LIB_SPEC)
 AC_SUBST(TCL_BUILD_STUB_LIB_SPEC)
 AC_SUBST(prefix)
@@ -61,6 +84,8 @@ AC_SUBST(TK_LIBS)
 AC_SUBST(TK_LIB_SPEC)
 AC_SUBST(TK_LD_SEARCH_FLAGS)
 AC_SUBST(TK_SRC_DIR)
+AC_SUBST(TK_LIB_SPEC)
+AC_SUBST(TK_STUB_LIB_SPEC)
 AC_SUBST(TK_BUILD_LIB_SPEC)
 AC_SUBST(TK_BUILD_STUB_LIB_SPEC)
 
